# linux-gaming-input-remapper

./: .gitignore  Cargo.toml  Dockerfile.build  Makefile  README.md  SUPPORTED_DEVICES.md
.github/workflows/: ci.yml  release.yml
devices/: devices.toml
packaging/appimage/: AppRun  gameremap.desktop
packaging/udev/: 99-gameremap.rules
src/: constants.rs  debug_ui.rs  devices.rs  diagnose.rs  engine.rs  event_types.rs  hidraw.rs  injector.rs  main.rs  monitor.rs  profile_ui.rs
src/config/: mod.rs  store.rs
src/drivers/: mod.rs
src/drivers/corsair/: gkeys.rs  k95.rs  mod.rs
src/drivers/logitech/: g502.rs  mod.rs
src/drivers/utechsmart/: mod.rs  venus.rs
src/profile_ui/: assignments.rs  auto_detect.rs  log_panel.rs  macros.rs  mod.rs  modifiers.rs  nav.rs  recording.rs  validation.rs
